style.css
/* ... */
a {
    color: var( --wp--preset--color--link);
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

h1.wp-block-site-title {
    font-size: 32px;
    font-weight: 400;
    line-height: 1.2;
    margin-bottom: 6px;
}

h1.wp-block-site-title a {
    color: var(--wp--preset-color-foreground);
}

p.wp-block-site-tagline {
    font-size: 16px;
    margin: 0;
}

header .wp-block-column:not(:first-child) {
    margin-left: 0em;
}

input,
select,
textarea {
    background-color: #fff;
    border: 1px solid #ddd;
    color: #1A1A2A;
    font-size: 18px;
    font-weight: 300;
    padding: 16px;
    width: 100%;
}

.wp-block-search .wp-block-search__inside-wrapper {
    padding-top: 5px;
}


/* # Site Navigation
---------------------------------------------------------------------------------------------------- */

nav.mainmenu {
    margin-bottom: 20px
}
/*

*/
nav nav.wp-block-navigation__container a:hover,
nav nav.wp-block-navigation__container .current-menu-item > a,
nav nav.wp-block-navigation__container .sub-menu .current-menu-item > a:hover {
    color: #ffffff;
}

nav nav .wp-block-navigation__container .wp-block-navigation-link__label {
    font-size: 16px;

}

nav nav .wp-block-navigation-link__container .wp-block-navigation-link__label {
    font-size: 14px;
    color: #333;
}

nav nav .wp-block-navigation__container a {
    background: #328DBD;
    background: linear-gradient(top, rgba(102, 175, 214, 0.6) 0, rgba(54, 150, 201, 0.6) 40%, rgba(34, 96, 129, 0.6) 100%) no-repeat;
    background: -webkit-linear-gradient(top, rgba(102, 175, 214, 0.6) 0, rgba(54, 150, 201, 0.6) 40%, rgba(34, 96, 129, 0.6) 100%) no-repeat;
    background: -moz-linear-gradient(top, rgba(102, 175, 214, 0.6) 0, rgba(54, 150, 201, 0.6) 40%, rgba(34, 96, 129, 0.6) 100%) no-repeat;
    background: -o-linear-gradient(top, rgba(102, 175, 214, 0.6) 0, rgba(54, 150, 201, 0.6) 40%, rgba(34, 96, 129, 0.6) 100%) no-repeat;
    background: -ms-linear-gradient(top, rgba(102, 175, 214, 0.6) 0, rgba(54, 150, 201, 0.6) 40%, rgba(34, 96, 129, 0.6) 100%) no-repeat;
    background: linear-gradient(top, rgba(102, 175, 214, 0.6) 0, rgba(54, 150, 201, 0.6) 40%, rgba(34, 96, 129, 0.6) 100%) no-repeat;
    -svg-background: linear-gradient(top, rgba(102, 175, 214, 0.6) 0, rgba(54, 150, 201, 0.6) 40%, rgba(34, 96, 129, 0.6) 100%) no-repeat;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    border: 1px solid rgba(26, 72, 97, 0.6);
    padding: 0 22px;
    margin: 0 auto;
    /* color: #163F55; */

    padding: 0 22px;
    margin: 0 auto;
    position: relative;
    display: block;
    height: 28px;
    cursor: pointer;
    text-decoration: none;
    /* color: #31454E; */
    line-height: 28px;
    text-align: center;

}


.wp-block-navigation__submenu-container {
    left: -9999px;
    opacity: 0;
    position: absolute;
    -webkit-transition: opacity .4s ease-in-out;
    -moz-transition:    opacity .4s ease-in-out;
    -ms-transition:     opacity .4s ease-in-out;
    -o-transition:      opacity .4s ease-in-out;
    transition:         opacity .4s ease-in-out;
    width: 200px;
    z-index: 99;
    display: block;
    width: 250px !important;
    font-size: 16px;
}

.wp-block-navigation__container .sub-menu a {
    background-color: #fff;
    border: 1px solid #eee;
    border-top: none;
    font-size: 14px;

    position: relative;

    overflow: hidden;
    width: 200px;
}

.wp-block-navigation__container .sub-menu .sub-menu {
    margin: -55px 0 0 199px;
}

.wp-block-navigation__container .menu-item:hover {
    position: static;
}

.wp-block-navigation__container .menu-item:hover > .sub-menu {
    left: auto;
    opacity: 1;
}

.wp-block-navigation__container > .first > a {
    padding-left: 0;
}

.wp-block-navigation__container > .last > a {
    padding-right: 0;
}

.wp-block-navigation__container > .right {
    color: #fff;
    float: right;
    list-style-type: none;
    padding: 30px 0;
}

.wp-block-navigation__container > .right > a {
    display: inline;
    padding: 0;
}

.wp-block-navigation__container > .rss > a {
    margin-left: 48px;
}

.wp-block-navigation__container > .search {
    padding: 10px 0 0;
}

.wp-block-navigation ul li {
    padding-right: 10px;
}

.wp-block-navigation ul li a {
    padding: 0 22px !important;
}

.wp-block-navigation.is-vertical ul li a {
    padding-left: 0px !important;
    color: var( --wp--preset--color--link);
}



.wp-block-navigation ul ul a {
    color: #333;
}
/*   .nav-primary */
nav nav.wp-block-navigation a:hover,
nav nav.wp-block-navigation .current-menu-item > a,
nav nav.wp-block-navigation .sub-menu .current-menu-item > a:hover {
    background: #467F95;
    background: linear-gradient(top, #6DA5BA 0, #5293AD 27%, #2E5361 100%) no-repeat;
    background: -webkit-linear-gradient(top, #6DA5BA 0, #5293AD 27%, #2E5361 100%) no-repeat;
    background: -moz-linear-gradient(top, #6DA5BA 0, #5293AD 27%, #2E5361 100%) no-repeat;
    background: -o-linear-gradient(top, #6DA5BA 0, #5293AD 27%, #2E5361 100%) no-repeat;
    background: -ms-linear-gradient(top, #6DA5BA 0, #5293AD 27%, #2E5361 100%) no-repeat;
    background: linear-gradient(top, #6DA5BA 0, #5293AD 27%, #2E5361 100%) no-repeat;
    -svg-background: linear-gradient(top, #6DA5BA 0, #5293AD 27%, #2E5361 100%) no-repeat;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    border: 1px solid #335B6C;
    padding: 0 22px;
    margin: 0 auto;
}

nav nav.wp-block-navigation .has-child>.wp-block-navigation-link__content {
    padding-right: 22px;


}

nav nav.wp-block-navigation .wp-block-navigation-link__content {
    padding-top: 0;
    padding-left: 22px;
    padding-right: 22px;
    padding-bottom: 0px;
    color: #fff;
}

.wp-block-navigation .has-child :where(.submenu-container,.wp-block-navigation-link__container) {
    left: 0em;
    min-width: 215px;
}
/* ... */

